--- a/hw3Solution/t1.in
+++ b/hw3Solution/t1.in
@@ -1,21 +1,11 @@
-enum day {SUNDAY, MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATARDAY};
-
-
-int enumParam(enum day d){
-    return (int) d;
+void printOk(bool isOk) {
+    if (isOk) print("ok");
 }
 
-int return6() {
-    enum month {Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec}; 
-    return 6;
-}
-
-void main() {
-    bool c = true;
-    if ( not c) {
-        int x = 6;
-        printi(x);
-    }
-    else
-        syntax error;
+void main()
+{
+    int x = 4;
+    byte y = 100 b;
+    printOk(x>y);
+    int z;
 }
