--- a/hw3Solution/t1.in
+++ b/hw3Solution/t1.in
@@ -1,6 +1,11 @@
-enum A {a1, a2, a3};
-	
-void main() {
-	int x = (int) a1;
-	return;
+void printOk(bool isOk) {
+    if (isOk) print("ok");
+}
+
+void main()
+{
+    int x = 4;
+    byte y = 100 b;
+    printOk(x>y);
+    int z;
 }
